# k9r

./: README.md
assets/: icon.psd  icon_square.psd
k9r-backend/: .env.example  Cargo.toml  README.md  diesel.toml
k9r-backend/api/: Cargo.toml
k9r-backend/api/src/: lib.rs  models.rs  permissions.rs
k9r-backend/api/src/community/: get.rs  put.rs
k9r-backend/api/src/forum/: delete.rs  get.rs  mod.rs  models.rs  post.rs  put.rs
k9r-backend/api/src/game_servers/: delete.rs  get.rs  post.rs  put.rs
k9r-backend/api/src/middleware/: features.rs  mod.rs  permissions.rs
k9r-backend/api/src/storage/: delete.rs  get.rs  mod.rs  post.rs
k9r-backend/api/src/support/: get.rs  mod.rs  post.rs  put.rs
k9r-backend/api/src/user/: delete.rs  get.rs  mod.rs  models.rs  post.rs  put.rs
k9r-backend/api/src/usergroup/: delete.rs  get.rs  mod.rs  post.rs  put.rs
k9r-backend/db/: Cargo.toml
k9r-backend/db/src/: lib.rs  models.rs  schema.rs
k9r-backend/db/src/crud/: admin_keys.rs  community_details.rs  forum_posts.rs  forum_sections.rs  forum_threads.rs  forum_topics.rs  game_servers.rs  mod.rs  support_ticket_replies.rs  support_tickets.rs  usergroups.rs  users.rs
k9r-backend/migrations/2025-03-12-012959_create_community_details/: down.sql  up.sql
k9r-backend/migrations/2025-03-12-013004_create_users/: up.sql
k9r-backend/migrations/2025-03-12-013005_create_usergroups/: up.sql
k9r-backend/migrations/2025-03-13-052014_create_forum_sections/: down.sql  up.sql
k9r-backend/migrations/2025-03-13-052236_create_forum_topics/: down.sql  up.sql
k9r-backend/migrations/2025-03-13-052414_create_forum_threads/: down.sql  up.sql
k9r-backend/migrations/2025-03-13-052721_create_forum_posts/: down.sql  up.sql
k9r-backend/migrations/2025-03-14-185051_create_admin_keys/: down.sql  up.sql
k9r-backend/migrations/2025-03-23-004620_create_game_servers/: up.sql
k9r-backend/migrations/2025-04-06-211411_create_support_tickets/: down.sql  up.sql
k9r-backend/migrations/2025-04-06-212155_create_support_ticket_replies/: down.sql  up.sql
k9r-backend/src/: main.rs
k9r-backend/utils/: Cargo.toml
k9r-backend/utils/src/: lib.rs
k9r-minecraft/: pom.xml
k9r-minecraft/src/main/resources/: plugin.yml
k9r-next/: .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json
k9r-next/src/api/: permissions.ts  resources.ts
k9r-next/src/api/community-details/: api.ts  models.ts
k9r-next/src/api/forum/: api.ts  models.ts
k9r-next/src/api/game-servers/: api.ts  models.ts
k9r-next/src/api/storage/: api.ts  models.ts
k9r-next/src/api/support/: api.ts  models.ts
k9r-next/src/api/usergroups/: api.ts  models.ts
k9r-next/src/api/users/: api.ts  models.ts
k9r-next/src/app/: client.tsx  globals.scss  index.module.scss  layout.tsx  not-found.tsx  page.tsx
k9r-next/src/app/admin/: client.tsx  page.tsx
k9r-next/src/app/admin/root/: client.tsx  page.tsx  root.module.scss
k9r-next/src/app/community/: client.tsx  page.tsx
k9r-next/src/app/forum/: page.tsx
k9r-next/src/app/store/: page.tsx
k9r-next/src/app/support/: client.tsx  page.tsx  support.module.scss
k9r-next/src/app/user/[id]/: client.tsx  page.tsx
k9r-next/src/app/user/login/: client.tsx  login.module.scss  page.tsx
k9r-next/src/app/user/search/: client.tsx  page.tsx  search.module.scss
k9r-next/src/app/user/settings/: client.tsx  page.tsx  settings.module.scss
k9r-next/src/components/admin/admin-header/: admin-header.tsx  header.module.scss
k9r-next/src/components/admin/community-details/: community-details.tsx  details.module.scss
k9r-next/src/components/admin/forum-management/: forum-management.tsx  forum.module.scss
k9r-next/src/components/admin/game-servers/: game-servers.tsx  minecraft-how.tsx  servers.module.scss
k9r-next/src/components/admin/usergroups/: usergroups.module.scss  usergroups.tsx
k9r-next/src/components/admin/users/: users.module.scss  users.tsx
k9r-next/src/components/community-icon/: community-icon.tsx  icon.module.scss
k9r-next/src/components/community/community-header/: community-header.tsx  (+1 more)
k9r-next/src/components/dropdown-tab/: dropdown-tab.tsx  dropdown.module.scss
k9r-next/src/components/file-upload/: file-upload.tsx
k9r-next/src/components/footer/: footer.module.scss  footer.tsx
k9r-next/src/components/header/: header.module.scss  header.tsx
k9r-next/src/components/image-upload/: image-upload.tsx
k9r-next/src/components/loading/: loading-alert.tsx
k9r-next/src/components/logout-button/: logout.module.scss  logout.tsx
k9r-next/src/components/material-icon/: icon.module.scss  material-icon.tsx
k9r-next/src/components/nav-back/: nav-back.tsx
k9r-next/src/components/popup/: popup.module.scss  popup.tsx
k9r-next/src/components/search-bar/: search-bar.tsx  search.module.scss
k9r-next/src/utils/: cookies.ts  stored-cookies.ts  time-ago.ts  token.ts
k9r-socket-server/: .env.example  .gitignore  Cargo.toml  package-lock.json  package.json
k9r-socket-server/src/: api.ts  main.rs  room.rs  server.ts  user.rs
scripts/: README.md  root-user.py  usergroup-manager.py
(+83 files in other folders)
