[workspace]
members = [
    "api", 
    "db", 
    "utils"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/CKAY-9/k9r"

[workspace.dependencies]
k9r_api = { version = "*", path = "./api" }
k9r_db = { version = "*", path = "./db" }
k9r_utils = { version = "*", path = "./utils" }
diesel = { version = "2.2.8", features = ["postgres"] }
actix-cors = "0.7.1"
actix-web = "4.10.2"
chrono = "0.4.40"
dotenvy = "0.15.7"
iso8601 = "0.6.2"
rand = "0.9.0"
reqwest = "0.12.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"

[package]
name = "k9r-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
iso8601 = { workspace = true }
k9r_api = { workspace = true }
k9r_utils = { workspace = true }
chrono = { workspace = true }
k9r_db = { workspace = true }
