[package]
name = "k9r_api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "k9r_api"
path = "src/lib.rs"
doctest = false

[dependencies]
actix-web = { workspace = true }
rand = { workspace = true }
iso8601 = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
k9r_db = { workspace = true }
k9r_utils = { workspace = true }
actix-multipart = { workspace = true }
actix-files = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-types = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
mime_guess = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
