[package]
name = "k9r_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "k9r_utils"
path = "src/lib.rs"
doctest = false

[dependencies]
dotenvy = { workspace = true }
actix-web = { workspace = true }
chrono = { workspace = true }
iso8601 = { workspace = true }